# bibjoin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  create_new_tag.yml  publish_crate.yml  release.yml
examples/: scopus.csv  wos.txt
src/: main.rs
