[package]
name = "bibjoin"
authors = ["Jose Storopoli <thestoropoli@gmail.com>"]
version = "0.1.3"
edition = "2018"
license = "MIT"
description = "Combine CSV/TSV files from Scopus and Web of Science by DOI"
homepage = "https://github.com/storopoli/RSL"
readme = "README.md"

[dependencies]
polars = "0.15.1"
clap = "3.0.0-beta.4"
